# inno_nummod_fall_2019

./: .gitignore  HW2 Levchenko Ekaterina.ipynb  Project.ipynb  README.md  hw5.py  main.cpp  operations.h  packing_posit.h  posit.cpp  posit.h
HW1/: main.c
HW2/: HW2.cpp  MathematicalSteps.ipynb  Timur_Borgalinov_HW2.ipynb  ha2.ipynb  input.txt  output.txt
HW3/: HA3.ipynb
NM_project/: NM_solution_Ekaterina_Yashkina.ipynb
Project/: NM_Project.ipynb  stink_propagation.ipynb
diffusion_project/: .gitignore  CMakeLists.txt  grid.cpp  grid.h  grid.txt  main.cpp  plot.py  result.txt
ha2/: ha2.ipynb  ha2.py  ha2Draft.tex  hw2.cpp  input.txt  output.txt  sample.out.txt
ha3/: Dockerfile  HW31 Levchenko Ekaterina.ipynb  README.md  docker-compose.yml  ha3.c  ha3.cpp  ha3.ipynb  hw3.ipynb  main.c  main.tex  solution.cpp
ha4/: Dockerfile  docker-compose.yml  ha4.c  main.cpp
ha5/: CMakeLists.txt  NM5.py  TA_HW5.py  chemical.py  ha5.cpp  ha5.py  ha5_solution.py  hw5.py  input.txt  main.cpp  main.py  output.txt  runge.cpp  solution.cpp
ha6/: NM_project.ipynb
lab1/: HA1.ipynb  Makefile  README.md  lab session notebook.ipynb
lab1/unum/: .gitignore  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  Cargo.toml  Makefile  README.md  build.rs  cmake_install.cmake  converter.c  converter.h  main.cpp  operations.c  operations.h  posit.c  posit.cpp  posit.h  posit_constants.h  tests_dot.c  unum.tar  util.c  util.h
lab1/unum/Test_dot_product/: Test_dot_product.cpp  Test_dot_product.vcxproj  Test_dot_product.vcxproj.filters
lab1/unum/cmake/: unumConfig.cmake.in
lab1/unum/my_posit32/: main.cpp  posit.h
lab1/unum/src/: .posit.h.swo  .posit.h.swp  .util.h.swo  CMakeLists.txt  atleastitried.c  exports.rs  inner_tests.rs  lib.rs  main.c  op.c  op.h  pack.c  pack.h  posit.c  posit.cpp  posit.h  posit.rs  posit_types.h  regime.rs  res  util.c  util.h  utils.c  utils.h
lab1/unum/src/double/: double.h  double_conversion.c  double_conversion.h
lab1/unum/src/inner_tests/: bitvec_mul_tests.rs  mod.rs  regime_tests.rs
lab1/unum/src/inner_tests/posit/: mod.rs  other_tests.rs  posit_add.rs  posit_mul.rs
lab1/unum/src/posit/: posit.h  posit_conversion.c  posit_conversion.h  posit_ops.c  posit_ops.h  posit_utils.c  posit_utils.h
lab1/unum/src/tests_float/: dot_product.rs  minima.rs  mod.rs  sum.rs
lab1/unum/src/tests_posit/: dot_product.rs  minima.rs  mod.rs  sum.rs
lab1/unum/test/: dot_product_test.cpp
lab1/unum/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_dot_product.c  test_dot_product_posit  test_dot_product_posit.c  test_dot_product_posit.cpp  test_function.c  test_minima.c  test_minima_posit.c  test_sum.c  test_sum_posit.c
lab2/: code part.ipynb  lab session notebook.ipynb  lab session notebook.slides.html
lab4/: Lagrange_polynomial.ipynb  Untitled.ipynb  lab4_1.slides.html  lab_4_1.ipynb  lab_4_1.slides.html
lab5/: lab5.ipynb
lab6/: lab6.ipynb
lab7/: lab7.ipynb
nm_project/: gas_gas_gas.avi  последнийденьиншалла.ipynb
project/: Mikhail_Evdpkimov.ipynb  NM_Project.ipynb  (+7 more)
(+46 files in other folders)
